Lab4/Lab4/Design01.cydsn/BUILD.log
--------------- Build Started: 02/26/2025 17:33:09 Project: Design01, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Lenovo\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p D:\Microprocess2\Lab4\Lab4\Design01.cydsn\Design01.cyprj -d CY8C4245AXQ-483 -s D:\Microprocess2\Lab4\Lab4\Design01.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:19:9: warning: implicit declaration of function 'CapSense_UpdateEnabledBaselines' [-Wimplicit-function-declaration]
         CapSense_UpdateEnabledBaselines();
         ^
main.c:20:9: warning: implicit declaration of function 'CapSense_ScanEnabledWidgets' [-Wimplicit-function-declaration]
         CapSense_ScanEnabledWidgets();
         ^
main.c:24:51: error: 'CapSense_LinearSlider0_Sns0' undeclared (first use in this function)
         slider_position = CapSense_GetCentroidPos(CapSense_LinearSlider0_Sns0);
                                                   ^
main.c:24:51: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 02/26/2025 17:33:15 ---------------
